<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.LocationActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtHeading"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/enable_location"/>

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_below="@+id/txtHeading"
                android:id="@+id/animation_view"
                android:layout_width="300dp"
                app:lottie_enableMergePathsForKitKatAndAbove="true"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/txtDes"
                android:layout_below="@+id/animation_view"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/we_need_to_know_your_location_in_order_to_take_your_current_city"/>

            <Button
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/txtDes"
                android:id="@+id/btnEnable"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/button_background"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/enable"/>




        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>